fixed overflow issue with deal tabs

--- a/src/App.scss
+++ b/src/App.scss
@@ -233,6 +233,10 @@ th {
 
   .mainRoute {
     grid-area: mainRoute;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
   }
 
   .sidebar {
