--- a/src/components/admin/FundManagerDashboard/FundManagerDashboard.scss
+++ b/src/components/admin/FundManagerDashboard/FundManagerDashboard.scss
@@ -1,8 +1,6 @@
 @import '../../../App.scss';
 
 .FundManagerDashboard {
-  max-width: 10%;
-
   .mainTitleContainer {
     display: flex;
     justify-content: space-between;
